--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,22 @@
-<h1>StaticPages#index</h1>
-<p>Find me in app/views/static_pages/index.html.erb</p>
+<div class="container">
+  <h1>Калькулятор доходности по займу</h1>
+  	<div class="row">
+  		<div class="col-md-6">
+		  	<%= form_tag("/", method: "get") do %>
+		  		<div class="form-group">
+		  			<%= label_tag(:invested_money, "Сумма инвестиции", class: 'control-label') %>
+		  			<%= text_field_tag(:invested_money, @invested_money, class: 'form-control') %>
+		  		</div>
+		  		<div class="form-group">
+			  		<%= submit_tag("Расчитать", class: 'btn btn-primary') %>
+			  	</div>
+			<% end %>
+			<div class="alert alert-success" role="alert">
+				<strong>Ожидаемая доходность:</strong> <%= @expect_profit %>
+			</div>
+			<div class="alert alert-info" role="alert">
+				<strong>Ожидаемая историческая доходность:</strong> <%= @expect_history_profit %>
+			</div>
+		</div>
+	</div>
+</div>
