--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,28 @@
 <div class="container">
-  <h1>Калькулятор доходности по займу</h1>
+  <h1>Хакатон по Рискам</h1>
+  <h2>Команда 2+2</h2>
+  	<div class="row">
+  		<div class="col-md-3">
+  			<%= image_tag("m1.jpg", class: "img-responsive") %>
+  			<h3>Михаил Клишевич</h3>
+  			<br/>
+  		</div>
+  		<div class="col-md-3">
+  			<%= image_tag("m2.jpg", class: "img-responsive") %>
+  			<h3>Михаил Борисов</h3>
+  			<br/>
+  		</div>
+  		<div class="col-md-3">
+  			<%= image_tag("m3.jpg", class: "img-responsive") %>
+  			<h3>Екатерина Ганькина</h3>
+  			<br/>
+  		</div>
+  		<div class="col-md-3">
+  			<%= image_tag("m4.jpg", class: "img-responsive") %>
+  			<h3>Екатерина Атлетова</h3>
+  			<br/>
+  		</div>
+  	</div>
   	<div class="row">
   		<div class="col-md-6">
 		  	<%= form_tag("/", method: "get") do %>
