--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1>Хакатон по Рискам</h1>
-  <h2>Команда 2+2</h2>
+  	<h1>Хакатон по Рискам</h1>
+  	<h2>1. Команда 2+2</h2>
   	<div class="row">
   		<div class="col-md-3">
   			<%= image_tag("m1.jpg", class: "img-responsive") %>
@@ -23,6 +23,11 @@
   			<br/>
   		</div>
   	</div>
+  	<h2>2. Наша идея, наша модель</h2>
+  	<h2>3. Бизнес-эффект (в деньгах)</h2>
+  	<h2>4. Сложность реализации (внедрения)</h2>
+  	<h2>5. Ценность идеи</h2>
+  	<h2>6. Онлайн калькулятор</h2>
   	<div class="row">
   		<div class="col-md-6">
 		  	<%= form_tag("/", method: "get") do %>
