--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,4 +11,9 @@
   <body>
     <%= yield %>
   </body>
+  <footer class="bs-docs-footer"> 
+  	<div class="container"> 
+  		<p>Сделано с любовью на Хакатоне по рискам в Альфа-Лаборатории, Team 2+2 (Альфа-Банк)</p> 
+  	</div> 
+  </footer>
 </html>
