--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -83,7 +83,7 @@
 			  	</div>
 			<% end %>
 			<div class="alert alert-info" role="alert">
-				<strong>Рейтинг:</strong> <%= @rating %>
+				<strong>Вероятность дефолта:</strong> <%= @rating %>
 			</div>
 			<% if @good_rating %>
 			<div class="alert alert-success" role="alert">
