--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </body>
   <footer class="bs-docs-footer"> 
   	<div class="container"> 
-  		<p>Сделано с любовью на Хакатоне по рискам в Альфа-Лаборатории, Team 2+2 (Альфа-Банк)</p> 
+  		<p>Сделано с любовью на Хакатоне по рискам в Альфа-Лаборатории, Team 2+2 (Альфа-Банк), 4 фев 2017</p> 
   	</div> 
   </footer>
 </html>
