--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -24,37 +24,32 @@
   		</div>
   	</div>
   	<h2>2. Наша идея, наша модель</h2>
-  	<%= image_tag("gini.jpg", class: "img-responsive") %>
-  	<br/>
-  	<%= image_tag("depandency.jpg", class: "img-responsive") %>
-  	<br/>
+  	<div class="myimg"><%= image_tag("gini.jpg", class: "img-responsive") %></div>
   	<div>Мы строили модель на анкетных данных 1170 заёмщиков, 141 из которых являются дефолтниками. Наше определение дефолта: 60+ в течение всей жизни кредита.</div>
-  	<div>Оценивая переменные по степени значимости, мы выявили 5 переменных: - Количество поручителей, -Семейное положение, - Количество детей, - Всего активных кредитных договоров, - Общее число запрососв в НБКИ за последние 12 мес, на которых модель Логистической регрессии даёт Gini порядка 55% на обучающей выборке и 50% на тестовой.</div>
+    <div>Оценивая переменные по степени значимости, мы выявили 5 переменных: - Количество поручителей, -Семейное положение, - Количество детей, - Всего активных кредитных договоров, - Общее число запрососв в НБКИ за последние 12 мес, на которых модель Логистической регрессии даёт Gini порядка 55% на обучающей выборке и 50% на тестовой.</div>
+  	<div class="myimg"><%= image_tag("depandency.jpg", class: "img-responsive") %></div>
   	<h2>3. Бизнес-эффект (в деньгах)</h2>
-  	<%= image_tag("face_palm.jpg", width: "600px;", class: "img-responsive") %>
-  	<div>
-  		<h3>3.1. Меньше выдаем плохих кредитов</h3>
-  		<ul>
-  			<li>Экономия на дефолтах</li>
-  			<li>Экономия на операционных расходах (коллекшн и т.п.)</li>
-  		</ul>
-  	</div>
-  	<div>
-  		<h3>3.2. Делаем меньше отказов хорошим заемщикам</h3>
-  	</div>
-  	<div>
-  		<h3>3.3. Экономия на выезде кредитного аналитика</h3>
-  	</div>
-  	<h2>4. Сложность реализации (внедрения)</h2>
-  	<h2>5. Ценность идеи</h2>
-  	<div>Финансовый эффект от внедрения работоспособной модели для массового бизнеса включает несколько слагаемых. Мы можем получить дополнительную прибыль и избежать части возможных убытков.</div>
+    <div>
+      <p>Для оценки финансового результата мы учитываем, что существующая база клиентов, на которой обучалась модель, прошла предварительный отбор на основе существующей модели. Так как у нас нет информации о поведении клиентов, которым отказали в кредите, мы можем прогнозировать работу модели только в дополнение к существующей модели.</p>
+      <p>Наша модель рассчитывает вероятность дефолта клиента на основе 5ти параметров. По существующим данным оптимальным порогом для отказа клиенту будет 30% и более вероятности дефолта.</p>
+      <p>Сравним результат работы текущей модели отдельно и комбинации текущая + наша.</p>
+      <p>Текущая модель – 1176 клиентов, из них 146 (или <b>12.4%</b>) дефолтов (60+ просрочка).</p>
+      <p>Применим порог отказа в 30% к выборке. Этот порог не пройдут 45 хороших и 40 плохих клиентов. Так как «плохой» клиент в среднем приносит больше убытков Банку, чем «хороший» – доходов, результат работы модели будет положительным. Новая база прошедших отбор клиентов – 1 091, из них 106 (<b>9.7%</b>)  - дефолтные клиенты. Вычисляя прибыль и убытки в среднем от одного «хорошего» (+323 тыс. руб.) и одного «плохого» клиентов (- 908 тыс. руб.), сравним общую прибыль и результат на одного клиента базы:</p>
+      <div class="myimg"><%= image_tag "fin_rez.jpg", class: "img-responsive" %></div>
+      <p>Полученный результат от применения модели: уменьшение доли дефолтных клиентов <b>с 12.4% до 9.7%</b> от привлеченных, увеличение прибыли от клиента на +33 тыс. руб. ( <b>+ 20%</b> ).</p>
+    </div>
+  	<h2>4. Ценность идеи</h2>
+    <div class="myimg"><%= image_tag("face_palm.jpg", width: "600px;", class: "img-responsive", title: "Чтобы не было Palmface, надо внедрять нашу модель :)") %></div>
+  	<p>Ценность идеи в том что мы можем получить дополнительную прибыль и избежать части возможных убытков.</p>
   	<ol>
   		<li>Отсутствие необходимости в дорогостоящем выезде Кредитного аналитика </li>
   		<li>Снижение затрат на услуги коллекторских агентов</li>
   		<li>Одобрение большего количества хороших заемщиков</li>
   		<li>Снижение количества плохих заемщиков</li>
   	</ol>
-  	<h2 id="calc0">6. Онлайн калькулятор</h2>
+  	<h2 id="calc0">5. Сложность реализации (внедрения)</h2>
+    <div>Сложность реализации низкая, в подтверждение этого мы сделали "Онлайн калькулятор"</div>
+    <br/>
   	<div class="row">
   		<div class="col-md-6">
 		  	<%= form_tag("/#calc0", method: "get") do %>
