improvement fin rez and calculator

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -31,12 +31,24 @@
   	<h2>3. Бизнес-эффект (в деньгах)</h2>
     <div>
       <p>Для оценки финансового результата мы учитываем, что существующая база клиентов, на которой обучалась модель, прошла предварительный отбор на основе существующей модели. Так как у нас нет информации о поведении клиентов, которым отказали в кредите, мы можем прогнозировать работу модели только в дополнение к существующей модели.</p>
-      <p>Наша модель рассчитывает вероятность дефолта клиента на основе 5ти параметров. По существующим данным оптимальным порогом для отказа клиенту будет 30% и более вероятности дефолта.</p>
       <p>Сравним результат работы текущей модели отдельно и комбинации текущая + наша.</p>
-      <p>Текущая модель – 1176 клиентов, из них 146 (или <b>12.4%</b>) дефолтов (60+ просрочка).</p>
-      <p>Применим порог отказа в 30% к выборке. Этот порог не пройдут 45 хороших и 40 плохих клиентов. Так как «плохой» клиент в среднем приносит больше убытков Банку, чем «хороший» – доходов, результат работы модели будет положительным. Новая база прошедших отбор клиентов – 1 091, из них 106 (<b>9.7%</b>)  - дефолтные клиенты. Вычисляя прибыль и убытки в среднем от одного «хорошего» (+323 тыс. руб.) и одного «плохого» клиентов (- 908 тыс. руб.), сравним общую прибыль и результат на одного клиента базы:</p>
-      <div class="myimg"><%= image_tag "fin_rez.jpg", class: "img-responsive" %></div>
-      <p>Полученный результат от применения модели: уменьшение доли дефолтных клиентов <b>с 12.4% до 9.7%</b> от привлеченных, увеличение прибыли от клиента на +33 тыс. руб. ( <b>+ 20%</b> ).</p>
+      <p>Для этого необходимо оценить прибыль от среднего хорошего клиента за период кредитования и результат от среднего дефолтного клиента. Средние параметры клиентов из выборки (объем выдачи, срок кредита, среднее время до выхода в просрочку для дефолтных кредитов, среднюю % ставку) дополнены информацией из Клиентской отчетности МАСС по хорошим заемщикам за 2016 год (маржа рискового портфеля 13.2% годовых, маржа совокупная с доп. доходом (риск + безриск) 37.4% годовых).</p>
+      <p>Предполагаем также, что:</p>
+      <ul>
+        <li>средний клиент выплачивает кредит по аннуитетной схеме,</li>
+        <li>остаток ОД по просроченному кредиту списывается полностью после 180 дней просрочки,</li>
+        <li>если клиент получает отказ по кредитной заявке, он уходит из Банка совсем и не приносит безрисковой прибыли также</li>
+      </ul>
+      <p>Таким образом получаем оценку <b>прибыли от среднего хорошего</b> и <b>среднего плохого</b> клиентов как <b>+ 900 тыс. руб.</b> и <b>– 500 тыс. руб.</b> за весь срок кредита.</p>
+      <p>С учетом рассчитанной прибыли клиента получаем, что от применения модели будет положительный эффект, если установить порог отказа на основе нашей модели в 50% и более вероятности дефолта. Этот порог из текущей выборки не проходят 17 клиентов, из которых 12 плохих и 5 хороших.</p>
+      <div class="myimg"><%= image_tag("fin_rez2.png", class: "img-responsive") %></div>
+      <p>Полученный результат от применения модели:</p>
+      <ul>
+        <li>уменьшение доли дефолтных клиентов <b>с 12.4% до 11.6%</b> от всех привлеченных,</li>
+        <li>увеличение прибыли в пересчете на входящую базу в 1000 клиентов (на выходе текущей модели 1000, из них после фильтра нашей модели остается 986 клиентов) на <b>1.34 млн руб</b>,</li>
+        <li>увеличение прибыли от одного клиента базы на <b>1.7%</b>.</li>
+      </ul>
+
     </div>
   	<h2>4. Ценность идеи</h2>
     <div class="myimg"><%= image_tag("face_palm.jpg", width: "600px;", class: "img-responsive", title: "Чтобы не было Palmface, надо внедрять нашу модель :)") %></div>
@@ -44,7 +56,7 @@
   	<ol>
   		<li>Отсутствие необходимости в дорогостоящем выезде Кредитного аналитика </li>
   		<li>Снижение затрат на услуги коллекторских агентов</li>
-  		<li>Одобрение большего количества хороших заемщиков</li>
+  		<li>Одобрение большего количества хороших заемщиков в процентном соотношении</li>
   		<li>Снижение количества плохих заемщиков</li>
   	</ol>
   	<h2 id="calc0">5. Сложность реализации (внедрения)</h2>
@@ -77,17 +89,23 @@
 			  		<%= submit_tag("Расчитать", class: 'btn btn-primary') %>
 			  	</div>
 			<% end %>
+      <% if @rating %>
 			<div class="alert alert-info" role="alert">
-				<strong>Вероятность дефолта:</strong> <%= @rating %>
+				<strong>Вероятность дефолта:</strong> <%= "%.2f" % @rating_percent %> %
 			</div>
-			<% if @good_rating %>
+      <% end %>
+			<% if @good_rating == 2 %>
 			<div class="alert alert-success" role="alert">
-				<strong>Хороший клиент</strong> 
+				<strong>Хороший клиент (вероятность дефолта меньше 30%)</strong> 
 			</div>
-			<% else %>
-			<div class="alert alert-danger" role="alert">
-				<strong>Плохой клиент</strong> 
+			<% elsif @good_rating == 1 %>
+			<div class="alert alert-warning" role="alert">
+				<strong>Средний уровень риска (вероятность дефолта от 30% до 50%)</strong> 
 			</div>
+      <% elsif @good_rating == 0 %>
+      <div class="alert alert-danger" role="alert">
+        <strong>Плохой клиент (вероятность дефолта более 50%)</strong> 
+      </div>
 			<% end %>
 		</div>
 	</div>
