change to production

--- a/app/views/static_pages/test.html.erb
+++ b/app/views/static_pages/test.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
   <h2>Открыть счет в Альфа-Банке</h2>
-  <form method="post" action="http://ufrappdev1/ona/lead">
-      <p><b>Вводи данные</b></p>
-      <div>
-        <label>Телефон</label>
-        <input type="text" name="phone" value="9165926645" />
-    </div>
-    <div>
-        <label>Наименование</label>
-        <input type="text" name="name" value="старбакс"/>
-    </div>
-    <div>
-        <label>Город</label>
-        <input type="text" name="city" value="Самара"/>
-    </div>
-    <input type="hidden" name="regionCode" value="77"/>
-    <input type="hidden" name="platformId" value="Yandex.Direct"/>
-    <input type="hidden" name="advCode" value="QrdgcsaRRF3526152s=="/>
-    <p><input type="submit"></p>
-  </form>
+ <form method="post" action="https://anketa.alfabank.ru/ona/lead">
+  <p><b>Вводи данные</b></p>
+  <div>
+    <label>Телефон</label>
+    <input type="text" name="phone" value="9165926645" />
+  </div>
+  <div>
+    <label>Наименование</label>
+    <input type="text" name="name" value="старбакс"/>
+  </div>
+  <div>
+    <label>Город</label>
+    <input type="text" name="city" value="Самара"/>
+  </div>
+  <input type="hidden" name="regionCode" value="77"/>
+  <input type="hidden" name="platformId" value="Yandex.Direct"/>
+  <input type="hidden" name="advCode" value="QrdgcsaRRF3526152s=="/>
+  <p><input type="submit"></p>
+ </form>
 </div>
