--- a/app/views/static_pages/test.html.erb
+++ b/app/views/static_pages/test.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
     <h2>Открыть счет в Альфа-Банке</h2>
     <!-- <form method="post" action="http://ufrappint1/ona/lead"> -->
-    <!-- <form method="post" action="http://localhost:8080/lead"> -->
-    <form method="post" action="https://anketa.alfabank.ru/ona/lead">
+    <form method="post" action="http://localhost:8080/lead">
+    <!-- <form method="post" action="https://anketa.alfabank.ru/ona/lead"> -->
     <!-- <form method="post" action="http://ufr/ona/lead"> -->
         <p><b>Вводи данные</b></p>
         <div>
