--- a/app/views/static_pages/test2.html.erb
+++ b/app/views/static_pages/test2.html.erb
@@ -6,6 +6,10 @@
     <!-- <form method="post" action="http://ufr/ona/lead"> -->
         <p><b>Вводи данные</b></p>
         <div>
+            <label>name</label>
+            <input type="text" name="name" value="Билайн"/>
+        </div>
+        <div>
             <label>phone</label>
             <input type="text" name="phone" value="+7 916 592-66-45" />
             <!-- <input type="text" name="phone" value="79165926645" /> -->
