--- a/app/views/static_pages/gmaps.html.erb
+++ b/app/views/static_pages/gmaps.html.erb
@@ -7,15 +7,62 @@
 </style>
 <div class="container">
     <div id="map"></div>
+    <div id="info-box">?</div>
     <script>
-      var map;
-      function initMap() {
+    var map;
+    function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
+            center: {lat: -34.397, lng: 150.644},
+            zoom: 8
         });
-      }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCcz0tiTXcyMzZDZv2eVS_3QgCy34hEPXw&callback=initMap"
-    async defer></script>
+    }
+
+    function initMap2() {
+        map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 2,
+            center: new google.maps.LatLng(2.8,-187.3),
+            mapTypeId: 'terrain'
+        });
+
+        // Create a <script> tag and set the USGS URL as the source.
+        var script = document.createElement('script');
+        // This example uses a local copy of the GeoJSON stored at
+        // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
+        script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
+        document.getElementsByTagName('head')[0].appendChild(script);
+    }
+
+        // window.eqfeed_callback = function(results) {
+        //   for (var i = 0; i < results.features.length; i++) {
+        //     var coords = results.features[i].geometry.coordinates;
+        //     var latLng = new google.maps.LatLng(coords[1],coords[0]);
+        //     var marker = new google.maps.Marker({
+        //       position: latLng,
+        //       map: map
+        //     });
+        //   }
+        // }
+
+
+    function initMap3() {
+        map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 2,
+            center: new google.maps.LatLng(2.8,-187.3),
+            mapTypeId: 'terrain'
+        });
+
+        // map.data.loadGeoJson('/google.json');
+        map.data.loadGeoJson('/earthquake_GeoJSONP2.json');
+        map.data.setStyle(function(feature) {
+        	return { title: feature.getProperty('place') || null };
+        });
+
+        map.data.addListener('click', function(event) {
+          document.getElementById('info-box').textContent =
+              event.feature.getProperty('place');
+        });
+    }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCcz0tiTXcyMzZDZv2eVS_3QgCy34hEPXw&callback=initMap3"
+async defer></script>
 </div>
