--- a/app/views/static_pages/test2.html.erb
+++ b/app/views/static_pages/test2.html.erb
@@ -1,14 +1,10 @@
 <div class="container">
     <h2>Открыть счет в Альфа-Банке</h2>
-    <!-- <form method="post" action="http://ufrappint1/ona/lead"> -->
-    <form method="post" action="http://localhost:8080/lead">
+    <form method="post" action="http://ufrappint1/ona/lead?userType=nc">
+    <!-- <form method="post" action="http://localhost:8080/lead"> -->
     <!-- <form method="post" action="https://anketa.alfabank.ru/ona/lead"> -->
     <!-- <form method="post" action="http://ufr/ona/lead"> -->
         <p><b>Вводи данные</b></p>
-        <div>
-            <label>name</label>
-            <input type="text" name="name" value="Билайн"/>
-        </div>
         <div>
             <label>phone</label>
             <input type="text" name="phone" value="+7 916 592-66-45" />
@@ -24,7 +20,7 @@
         </div>
         <div>
             <label>city</label>
-            <input type="text" name="city" value="moscow"/>
+            <input type="text" name="city" value="Москва"/>
         </div>
         <div>
             <label>advCode</label>
