--- a/app/views/static_pages/test3.html.erb
+++ b/app/views/static_pages/test3.html.erb
@@ -9,16 +9,16 @@
                     <span class="placeholder">ваш телефон</span>
                 </label>
             </div>
-            <div class="b-widget_submit b-widget_submit__disabled">
-                <input type="submit" name="submitButton" value="Отправить">
-            </div>
             <input type="hidden" name="region" value="moscow" class="">
             <input type="hidden" name="clear" value="" class="">
             <input type="hidden" name="dev" value="dev" class="">
             <input type="hidden" name="regionCode" value="77" class="">
-            <input type="hidden" name="city" value="Москва" class="">
+            <input name="city" value="Москва" class="">
             <input type="hidden" name="advCode" value="" class="">
             <input type="hidden" name="platformId" value="alfasite" class="">
+            <div class="b-widget_submit b-widget_submit__disabled">
+                <input type="submit" name="submitButton" value="Отправить">
+            </div>
         </span>
     </form>
 </div>
